# Dynamic-Adaptor

./: .gitignore  README.md  a.json  pyproject.toml
.github/workflow/: release.yml.yml
.github/workflows/: main.yml
.workflow/: master-pipeline.yml
dynamicadaptor/: AddonCard.py  Content.py  DynamicConversion.py  Header.py  Majors.py  Message.py  Repost.py
tests/: grpc_test.py  web_test.py
