[tool.poetry]
name = "DynamicAdaptor"
version = "0.5.3"
description = ""
authors = ["DMC <lzxder@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
pydantic = "<=2.6.1"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "ts"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

